# gyro-mouse

./: .gitignore  README.md  app.json  package-lock.json  package.json
app/: index.tsx
app/mouse/: index.tsx
gyro-mouse-server/: main.py
gyro-mouse-server/server/: Cargo.toml
gyro-mouse-server/server/src/: main.rs  test.rs  test.txt
ios/: Podfile
ios/gyromouse/: Info.plist
ios/gyromouse.xcodeproj/: project.pbxproj
ios/gyromouse.xcodeproj/xcshareddata/xcschemes/: gyromouse.xcscheme
ios/gyromouse.xcworkspace/: contents.xcworkspacedata
