[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
futures-util = "0.3.31"
tokio-stream = "0.1.16"
log = "0.4.22"
env_logger = "0.11.5"
mouse-rs = "0.4.2"
serde_json = "1.0.132"
qr2term = "0.3.3"
local-ip-address = "0.6.3"

